--- a/css/aboutResponsive.css
+++ b/css/aboutResponsive.css
@@ -17,7 +17,7 @@
         top: 0;
         right: -1200px;
         width: 50%;
-        height: 100vh;
+        height: 100%;
         padding-top: 20px;
     }
     .menuRow ul {
