--- a/css/gameResponsive.css
+++ b/css/gameResponsive.css
@@ -28,7 +28,7 @@
         justify-content: space-evenly;
     }
     .mainCard {
-        margin-left: 320px;
+        margin-left: 84%;
     }
     .card:hover::before {
         transform: rotate(90deg) scaleX(1.1) scaleY(0.91);
